# ad-agent

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/env setup/: README.md  linux-install.sh  mac-install.sh  win-install.ps1
src/agent/cmd/: config.ini  main-demo.py  main.py
src/agent/cmd/placeholder/: adcs.json  all.json  ftp.json  kerberos.json  ldap.json  recon.json  sharepoint.json
src/agent/core/adcs/: pyproject.toml
src/agent/core/adcs/src/adcs/: __init__.py  adcs.py  test.py
src/agent/core/adcs/tests/: test_adcs.py
src/agent/core/ftp/: README.md  pyproject.toml
src/agent/core/ftp/src/ftp/: __init__.py  ftp.json  ftp.py
src/agent/core/kerberos/: configReader.py  kerberos.py  pyproject.toml
src/agent/core/kerberos/src/kerberos/: __init__.py  kerberos.py
src/agent/core/kerberos/tests/: test_kerberos.py
src/agent/core/ldap/: pyproject.toml  setup.py
src/agent/core/ldap/ldapconnector/: ldapConnector.py
src/agent/core/ldap/ldapconnector.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/agent/core/ldap/src/ldap/: ldap.py  result.txt
src/agent/core/recon/: config.ini  logging_utils.py  pyproject.toml  recon.ini  recon.py
src/agent/core/recon/src/recon/: __init__.py  recon.py
src/agent/core/sharepoint/src/sharepoint/: sharepoint.py
src/agent/internal/authenticator/: pyproject.toml  test_authenticator.py
src/agent/internal/authenticator/src/authenticator/: __init__.py  authenticator.py
src/agent/internal/authenticator/tests/: test_authenticator.py
src/agent/internal/config/: config.ini  pyproject.toml  setup.py
src/agent/internal/config/configreader/: configReader.py
src/agent/internal/config/configreader.egg-info/: PKG-INFO  SOURCES.txt
src/agent/internal/config/src/config/: config.py
src/agent/internal/forwarder/: pyproject.toml  test_forwarder.py
src/agent/internal/forwarder/src/forwarder/: __init__.py  forwarder.py
src/agent/internal/forwarder/tests/: test.py  test_forwarder.py
src/agent/internal/logging-custom/: pyproject.toml
src/agent/internal/logging-custom/src/logging_custom/: logging_custom.py
tests/: config_test.py  ftp_test.py
