[tool.poetry]
name = "ad protect agent"
package-mode = false
version = "0.1.0"
description = "AD Protect Agent"
authors = ["Example <example@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ldap3-bleeding-edge = "^2.10.1.1337"
logging-custom = {path = "src/agent/internal/logging-custom", develop = true}
config = {path = "src/agent/internal/config", develop = true}
ldap = {path = "src/agent/core/ldap", develop = true}
forwarder = {path = "src/agent/internal/forwarder", develop = true}
authenticator = {path = "src/agent/internal/authenticator", develop = true}
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
