[tool.poetry]
name = "adcs"
version = "0.1.0"
description = "ADCS vulnerability scanning module for AD Protect Agent"
authors = ["Serena Ridany <example@hotmail.com>"]
readme = "README.md"
packages = [{include = "adcs", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# ldap = {path = "../../ldap", develop = true}
# config = {path = "../../../internal/config", develop = true}
# logging-custom = {path = "../../../internal/logging-custom", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"