[tool.poetry]
name = "kerberos"
version = "0.1.0"
description = "A kerberos attack custom package"
authors = ["Serena <serena@example.com>"]
readme = "README.md"
packages = [{include = "kerberos", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
ldap3-bleeding-edge = "^2.10.1.1337"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
