[tool.poetry]
name = "authenticator"
version = "0.1.0"
description = "A custome package for the agent authentication"
authors = ["Serena <serena@example.com>"]
readme = "README.md"
packages = [{include = "authenticator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
