[tool.poetry]
name = "config"
version = "0.1.0"
description = "A package to handle configuration files"
authors = ["Serena <serena@example.com>"]
readme = "README.md"
packages = [{include = "config", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
