[tool.poetry]
name = "logging-custom"
version = "0.1.0"
description = ""
authors = ["Serena <serena@example.com>"]
readme = "README.md"
packages = [{include = "logging_custom", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
